...
            food = it.map(Review::foodRating).average(),
            evening = it.map(Review::eveningRating).average(),
        )
    }

    companion object {
        private val defaultFoodCategories = listOf("Asiatisch", "Burger", "Pizza")
    }
}

